platform/gitops/components/platform/keycloak/upstream-sim/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak-upstream-sim
  labels:
    kubernetes.io/metadata.name: keycloak-upstream-sim
    istio-injection: "disabled"
    deploykube.gitops/component: keycloak-upstream-sim
