platform/gitops/components/platform/keycloak/upstream-sim/base/ciliumnetworkpolicy-smoke-kube-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keycloak-upstream-sim-smoke-allow-kube-apiserver
  namespace: keycloak-upstream-sim
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: keycloak-upstream-sim-smoke
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
